syntax = "proto3";

option csharp_namespace = "Larp.Protos.Authorization";

package larp.authorization;

import public "larp/accounts.proto";

service LarpAuthentication {
    rpc InitiateLogin(InitiateLoginRequest) returns (InitiateLoginResponse);
    rpc ConfirmLogin(ConfirmLoginRequest) returns (ConfirmLoginResponse);
    rpc ValidateSession(ValidateSessionRequest) returns (ValidateSessionResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
}

enum ValidationResponseCode {
    SUCCESS = 0;
    EXPIRED = 1;
    INVALID = 2;
}

message InitiateLoginRequest {
    string email = 1;
}

message InitiateLoginResponse {
    ValidationResponseCode status_code = 1; 
    string message = 2;
}

message ConfirmLoginRequest {
    string email = 1;
    string code = 2;
}

message ConfirmLoginResponse {
    string session_id = 1;
    ValidationResponseCode status_code = 2;
    string message = 3;
    larp.Account profile = 4;
}

message ValidateSessionRequest {
    string session_id = 1;
}

message ValidateSessionResponse {
    ValidationResponseCode status_code = 1;
    optional larp.Account profile = 2;
}

message LogoutRequest {
    string session_id = 1;
}

message LogoutResponse {
    
}